--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="api_google_maps">AIzaSyB4-ShgGCePEIkNa323YkTy83MHNnjosnE</string>
     <string name="app_name">StationTank</string>
+    <string name="open_drawer">abrir</string>
+    <string name="close_drawer">fechar</string>
 </resources>
